--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,10 @@
 body {
   font: 14px/2 "Open sans",sans-serif;
   letter-spacing: 0.05em;
+  background-color: yellow;
 }
 
-/* line 6, ../scss/partials/_header.scss */
+/* line 7, ../scss/partials/_header.scss */
 .btn {
   display: inline-block;
   padding: 13px 20px;
@@ -20,7 +21,7 @@ body {
   text-transform: uppercase;
   transition: color 0.1s linear 0.05s;
 }
-/* line 21, ../scss/partials/_header.scss */
+/* line 22, ../scss/partials/_header.scss */
 .btn::before {
   content: "";
   display: block;
@@ -34,34 +35,34 @@ body {
   opacity: 0;
   transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0.2s;
 }
-/* line 35, ../scss/partials/_header.scss */
+/* line 36, ../scss/partials/_header.scss */
 .btn::after {
   transition: border 0.1s linear 0.05s;
 }
-/* line 39, ../scss/partials/_header.scss */
+/* line 40, ../scss/partials/_header.scss */
 .btn .btn-inner {
   position: relative;
   z-index: 2;
 }
-/* line 44, ../scss/partials/_header.scss */
+/* line 45, ../scss/partials/_header.scss */
 .btn:hover {
   color: #373737;
   transition: color 0.1s linear 0s;
 }
-/* line 48, ../scss/partials/_header.scss */
+/* line 49, ../scss/partials/_header.scss */
 .btn:hover::before {
   top: 0;
   height: 100%;
   opacity: 1;
   transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0s;
 }
-/* line 55, ../scss/partials/_header.scss */
+/* line 56, ../scss/partials/_header.scss */
 .btn:hover::after {
   border-color: #373737;
   transition: border 0.1s linear 0s;
 }
 
-/* line 62, ../scss/partials/_header.scss */
+/* line 63, ../scss/partials/_header.scss */
 .slideshow {
   overflow: hidden;
   position: relative;
@@ -69,7 +70,7 @@ body {
   height: 100vh;
   z-index: 1;
 }
-/* line 69, ../scss/partials/_header.scss */
+/* line 70, ../scss/partials/_header.scss */
 .slideshow .slideshow-inner {
   position: absolute;
   top: 0;
@@ -77,7 +78,7 @@ body {
   width: 100%;
   height: 100%;
 }
-/* line 77, ../scss/partials/_header.scss */
+/* line 78, ../scss/partials/_header.scss */
 .slideshow .slides {
   position: absolute;
   top: 0;
@@ -86,7 +87,7 @@ body {
   height: 100%;
   z-index: 1;
 }
-/* line 86, ../scss/partials/_header.scss */
+/* line 87, ../scss/partials/_header.scss */
 .slideshow .slide {
   display: none;
   overflow: hidden;
@@ -99,19 +100,19 @@ body {
   opacity: 0;
   transition: opacity 0.3s ease;
 }
-/* line 98, ../scss/partials/_header.scss */
+/* line 99, ../scss/partials/_header.scss */
 .slideshow .slide.is-active {
   display: block;
 }
-/* line 102, ../scss/partials/_header.scss */
+/* line 103, ../scss/partials/_header.scss */
 .slideshow .slide.is-loaded {
   opacity: 1;
 }
-/* line 106, ../scss/partials/_header.scss */
+/* line 107, ../scss/partials/_header.scss */
 .slideshow .slide .caption {
   padding: 0 100px;
 }
-/* line 110, ../scss/partials/_header.scss */
+/* line 111, ../scss/partials/_header.scss */
 .slideshow .slide .image-container {
   position: absolute;
   top: 0;
@@ -123,7 +124,7 @@ body {
   background-size: cover;
   image-rendering: optimizeQuality;
 }
-/* line 121, ../scss/partials/_header.scss */
+/* line 122, ../scss/partials/_header.scss */
 .slideshow .slide .image-container::before {
   content: "";
   display: block;
@@ -134,14 +135,14 @@ body {
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
 }
-/* line 133, ../scss/partials/_header.scss */
+/* line 134, ../scss/partials/_header.scss */
 .slideshow .slide .image {
   width: 100%;
   width: 100%;
   object-fit: cover;
   height: 100%;
 }
-/* line 140, ../scss/partials/_header.scss */
+/* line 141, ../scss/partials/_header.scss */
 .slideshow .slide-content {
   position: absolute;
   top: 0;
@@ -155,7 +156,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-/* line 154, ../scss/partials/_header.scss */
+/* line 155, ../scss/partials/_header.scss */
 .slideshow .slide .title {
   margin: 0 auto 15px;
   max-width: 1000px;
@@ -163,23 +164,23 @@ body {
   letter-spacing: 0.35em;
   text-transform: uppercase;
 }
-/* line 162, ../scss/partials/_header.scss */
+/* line 163, ../scss/partials/_header.scss */
 .slideshow .slide .text {
   margin: 0 auto;
   max-width: 1000px;
   font-size: 18px;
   line-height: 1.4;
 }
-/* line 169, ../scss/partials/_header.scss */
+/* line 170, ../scss/partials/_header.scss */
 .slideshow .slide .btn {
   margin: 15px 0 0;
   border-color: #fff;
 }
-/* line 173, ../scss/partials/_header.scss */
+/* line 174, ../scss/partials/_header.scss */
 .slideshow .slide .btn::before {
   background: #fff;
 }
-/* line 179, ../scss/partials/_header.scss */
+/* line 180, ../scss/partials/_header.scss */
 .slideshow .pagination {
   position: absolute;
   bottom: 35px;
@@ -190,7 +191,7 @@ body {
   z-index: 2;
   text-align: center;
 }
-/* line 189, ../scss/partials/_header.scss */
+/* line 190, ../scss/partials/_header.scss */
 .slideshow .pagination .item {
   display: inline-block;
   padding: 15px 5px;
@@ -201,11 +202,11 @@ body {
   text-indent: -999em;
   z-index: 1;
 }
-/* line 199, ../scss/partials/_header.scss */
+/* line 200, ../scss/partials/_header.scss */
 .slideshow .pagination .item + .page {
   margin-left: -2px;
 }
-/* line 203, ../scss/partials/_header.scss */
+/* line 204, ../scss/partials/_header.scss */
 .slideshow .pagination .item::before {
   content: "";
   display: block;
@@ -217,18 +218,18 @@ body {
   background: rgba(255, 255, 255, 0.5);
   transition: background 0.2s ease;
 }
-/* line 215, ../scss/partials/_header.scss */
+/* line 216, ../scss/partials/_header.scss */
 .slideshow .pagination .item::after {
   width: 0;
   background: #fff;
   z-index: 2;
   transition: width 0.2s ease;
 }
-/* line 222, ../scss/partials/_header.scss */
+/* line 223, ../scss/partials/_header.scss */
 .slideshow .pagination .item:hover::before, .slideshow .pagination .item.is-active::before {
   background-color: #fff;
 }
-/* line 230, ../scss/partials/_header.scss */
+/* line 231, ../scss/partials/_header.scss */
 .slideshow .arrows .arrow {
   margin: -33px 0 0;
   padding: 20px;
@@ -237,23 +238,23 @@ body {
   cursor: pointer;
   z-index: 3;
 }
-/* line 234, ../scss/partials/_header.scss */
+/* line 235, ../scss/partials/_header.scss */
 .slideshow .arrows .prev {
   left: 30px;
 }
-/* line 237, ../scss/partials/_header.scss */
+/* line 238, ../scss/partials/_header.scss */
 .slideshow .arrows .prev:hover .svg {
   left: -10px;
 }
-/* line 242, ../scss/partials/_header.scss */
+/* line 243, ../scss/partials/_header.scss */
 .slideshow .arrows .next {
   right: 30px;
 }
-/* line 245, ../scss/partials/_header.scss */
+/* line 246, ../scss/partials/_header.scss */
 .slideshow .arrows .next:hover .svg {
   left: 10px;
 }
-/* line 250, ../scss/partials/_header.scss */
+/* line 251, ../scss/partials/_header.scss */
 .slideshow .arrows .svg {
   position: relative;
   left: 0;
