--- a/includes/header.html
+++ b/includes/header.html
@@ -1,13 +1,71 @@
-<!DOCTYPE html>
-<html lang="fr" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>HEADER</title>
-</head>
 
 <body>
+  <div id="kb" class="carousel kb_elastic animate_text kb_wrapper"
+   data-ride="carousel"
+   data-interval="6000"
+   data-pause="hover">
 
+  <!--======= Wrapper for Slides =======-->
+  <div class="carousel-inner" role="listbox">
+
+    <!--========= First Slide =========-->
+  <div class="item active">
+      <img src="img/visu.jpg" alt="slider 01" />
+      <div class="carousel-caption kb_caption">
+        <h1 data-animation="animated flipInX">Caption</h1>
+        <h2 data-animation="animated flipInX">More Description</h2>
+      </div>
+    </div>
+
+    <!--========= Second Slide =========-->
+    <div class="item">
+      <img src="img/marche1.png" alt="slider 02">
+      <div class="carousel-caption kb_caption kb_caption_right">
+        <h1 data-animation="animated flipInX">Caption</h1>
+        <h2 data-animation="animated flipInX">More Description</h2>
+      </div>
+    </div>
+
+    <!--========= Third Slide =========-->
+    <div class="item">
+      <img src="img/marche8.png" alt="slider 03" />
+      <div class="carousel-caption kb_caption kb_caption_center">
+        <h1 data-animation="animated flipInX">Caption</h1>
+        <h2 data-animation="animated flipInX">More Description</h2>
+      </div>
+    </div>
+
+  </div>
+
+  <!--======= <a href="https://www.jqueryscript.net/tags.php?/Navigation/">Navigation</a> Buttons =========-->
+
+  <!--======= Left Button =========-->
+  <a class="left carousel-control kb_control_left" href="#kb" role="button" data-slide="prev">
+    <span class="fa fa-angle-left kb_icons" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+
+  <!--======= Right Button =========-->
+  <a class="right carousel-control kb_control_right" href="#kb" role="button" data-slide="next">
+    <span class="fa fa-angle-right kb_icons" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+
+</div>
 </body>
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </html>
