--- a/includes/header.html
+++ b/includes/header.html
@@ -10,7 +10,7 @@
 
     <!--========= First Slide =========-->
   <div class="item active">
-      <img src="img/visu.jpg" alt="slider 01" />
+      <img src="img/Marché-de-Noël-2017-1.png" alt="slider 01" />
       <div class="carousel-caption kb_caption">
         <h1 data-animation="animated flipInX">Caption</h1>
         <h2 data-animation="animated flipInX">More Description</h2>
@@ -19,7 +19,7 @@
 
     <!--========= Second Slide =========-->
     <div class="item">
-      <img src="img/marche1.png" alt="slider 02">
+      <img src="img/Marché-de-Noël-2017-2.png" alt="slider 02">
       <div class="carousel-caption kb_caption kb_caption_right">
         <h1 data-animation="animated flipInX">Caption</h1>
         <h2 data-animation="animated flipInX">More Description</h2>
@@ -28,7 +28,7 @@
 
     <!--========= Third Slide =========-->
     <div class="item">
-      <img src="img/marche8.png" alt="slider 03" />
+      <img src="img/Marché-de-Noël-2017-8.png" alt="slider 03" />
       <div class="carousel-caption kb_caption kb_caption_center">
         <h1 data-animation="animated flipInX">Caption</h1>
         <h2 data-animation="animated flipInX">More Description</h2>
