--- a/includes/header.html
+++ b/includes/header.html
@@ -1,28 +1,25 @@
 
 <body>
-  <div id="kb" class="carousel kb_elastic animate_text kb_wrapper"
-   data-ride="carousel"
-   data-interval="6000"
-   data-pause="hover">
+  <div id="kb" class="carousel kb_elastic animate_text kb_wrapper"data-ride="carousel"data-interval="10000"data-pause="hover">
 
   <!--======= Wrapper for Slides =======-->
   <div class="carousel-inner" role="listbox">
 
     <!--========= First Slide =========-->
   <div class="item active">
-      <img src="img/visu.jpg" alt="slider 01" />
+      <img src="img/marche11.png" alt="slider 01" />
       <div class="carousel-caption kb_caption">
-        <h1 data-animation="animated flipInX">Caption</h1>
-        <h2 data-animation="animated flipInX">More Description</h2>
+        <h1 data-animation="animated flipInX">Marché de noel de Charleville-Mézières</h1>
+        <h2 data-animation="animated flipInX">Du 1 Décembre au 6 janvier 2019</h2>
       </div>
     </div>
 
     <!--========= Second Slide =========-->
     <div class="item">
-      <img src="img/marche1.png" alt="slider 02">
+      <img src="img/marche55.png" alt="slider 02">
       <div class="carousel-caption kb_caption kb_caption_right">
-        <h1 data-animation="animated flipInX">Caption</h1>
-        <h2 data-animation="animated flipInX">More Description</h2>
+        <h1 data-animation="animated flipInX">Marché de noel de Charleville-Mézières</h1>
+        <h2 data-animation="animated flipInX">Du 1 Décembre au 6 janvier 2019</h2>
       </div>
     </div>
 
@@ -30,8 +27,8 @@
     <div class="item">
       <img src="img/marche8.png" alt="slider 03" />
       <div class="carousel-caption kb_caption kb_caption_center">
-        <h1 data-animation="animated flipInX">Caption</h1>
-        <h2 data-animation="animated flipInX">More Description</h2>
+        <h1 data-animation="animated flipInX">Marché de noel de Charleville-Mézières</h1>
+        <h2 data-animation="animated flipInX">Du 1 Décembre au 6 janvier 2019</h2>
       </div>
     </div>
 
