--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* line 5, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../Ruby/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -345,4 +345,70 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     border: none !important;
     background: transparent !important;
   }
+}
+/* line 1, ../scss/partials/_navbar.scss */
+section {
+  position: relative;
+  width: 100%;
+}
+
+/* line 5, ../scss/partials/_navbar.scss */
+nav {
+  width: 100%;
+}
+
+/* line 8, ../scss/partials/_navbar.scss */
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  width: 140px;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  border: 1px dashed rgba(255, 255, 255, 0);
+  color: #fff;
+  padding: 20px 0 20px 0;
+  margin: -1px -2px -1px -1px;
+  cursor: pointer;
+  transition: all .2s;
+  -webkit-transition: all .2s;
+}
+
+/* line 22, ../scss/partials/_navbar.scss */
+nav ul li:hover {
+  background: rgba(0, 68, 19, 0.4);
+}
+
+/* line 25, ../scss/partials/_navbar.scss */
+nav ul {
+  border-bottom: 1px solid #fff;
+  position: absolute;
+  width: 100%;
+  padding: 0;
+  z-index: 100;
+}
+
+/* line 32, ../scss/partials/_navbar.scss */
+nav div {
+  position: absolute;
+  left: 0;
+  background: rgba(0, 68, 19, 0.8);
+  width: 140px;
+  height: 55px;
+  z-index: 99;
+}
+
+/* line 40, ../scss/partials/_navbar.scss */
+nav a:link {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+/* line 44, ../scss/partials/_navbar.scss */
+nav ul li a {
+  color: #fff;
+}
+
+/* line 47, ../scss/partials/_navbar.scss */
+nav ul li a:visited {
+  color: #6A9519;
 }
