--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,13 @@
 @import 'compass/reset';
 @import "partials/header";
+@import "partials/navbar";
+
+$color-pomme: #6A9519;
+$color-sapin: #004413;
+$color-glacier: #C8E3D0;
+$color-taupe: #81725E;
+$color-or: #D8B43F;
+$color-gris: #B4ABA2;
+$color-orange: #E95E3F;
+$color-jaune: #EE9B31;
+$color-perle: #E3EEEA;
