--- a/includes/header.html
+++ b/includes/header.html
@@ -8,25 +8,18 @@
     <!--========= First Slide =========-->
   <div class="item active">
 
-      <img src="img/marche11.png" alt="slider 01" />
-
       <img src="img/Marché-de-Noël-2017-1.png" alt="slider 01" />
-
       <div class="carousel-caption kb_caption">
-        <h1 data-animation="animated flipInX">Marché de noel de Charleville-Mézières</h1>
+        <h1 data-animation="animated flipInX">Marché de noel de Charleville-&nbsp;Mézières</h1>
         <h2 data-animation="animated flipInX">Du 1 Décembre au 6 janvier 2019</h2>
       </div>
     </div>
 
     <!--========= Second Slide =========-->
     <div class="item">
-
-      <img src="img/marche55.png" alt="slider 02">
-
       <img src="img/Marché-de-Noël-2017-2.png" alt="slider 02">
-
       <div class="carousel-caption kb_caption kb_caption_right">
-        <h1 data-animation="animated flipInX">Marché de noel de Charleville-Mézières</h1>
+        <h1 data-animation="animated flipInX">Marché de noel de Charleville-&nbsp;Mézières</h1>
         <h2 data-animation="animated flipInX">Du 1 Décembre au 6 janvier 2019</h2>
       </div>
     </div>
@@ -35,10 +28,10 @@
     <div class="item">
       <img src="img/Marché-de-Noël-2017-8.png" alt="slider 03" />
       <div class="carousel-caption kb_caption kb_caption_center">
-        <h1 data-animation="animated flipInX">Marché de noel de Charleville-Mézières</h1>
+        <h1 data-animation="animated flipInX">Marché de noel de Charleville-&nbsp;Mézières</h1>
         <h2 data-animation="animated flipInX">Du 1 Décembre au 6 janvier 2019</h2>
       </div>
-    </div>
+    </div>&nbsp;
 
   </div>
 
