--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,12 +4,27 @@ html{
 body{
   background-color: rgb(35, 37, 57);
 }
+
 .welcome{
   width: 100%;
   padding: 50px;
   text-align: center;
-  font-size: 8.5rem;
-  color: #fff;
+  font-size: 6vw;
+  color: #D8B43F;
   font-family:  'Dancing Script', cursive;
   font-weight: bold;
+}
+.planmdn{
+width: 80%;
+height: auto;
+margin-left: auto;
+margin-right: auto;
+display: block;
+}
+.plan{
+  justify-content: center;
+}
+.dlplan{
+  margin-top: 25px;
+  text-align: center;
 }
