--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -37,12 +37,36 @@ nav {
 		}
   }
 }
-nav li a span {
+
+ul .button-dropdown {
+    position: relative;
+}
+
+ul li a {
+    display: block;
+    color: #333;
+    background-color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+}
+
+ul li a span {
     display: inline-block;
     margin-left: 5px;
-    font-size: 1.5rem;
+    font-size: 10px;
+    color: #999;
 }
-.dropdown-menu {
+
+ul li a:hover, ul li a.dropdown-toggle.active {
+    background-color: #289dcc;
+    color: #fff;
+}
+
+ul li a:hover span, .nav li a.dropdown-toggle.active span {
+    color: #fff;
+}
+
+ul li .dropdown-menu {
     display: none;
     position: absolute;
     left: 0;
@@ -51,9 +75,11 @@ nav li a span {
     margin-top: 3px;
     text-align: left;
 }
-.dropdown-menu.active {
+
+ul li .dropdown-menu.active {
     display: block;
 }
-.dropdown-menu a {
+
+ul li .dropdown-menu a {
     width: 150px;
 }
