--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,241 @@
-/* line 1, ../scss/index.scss */
+/* line 1, ../scss/partials/_footer.scss */
+.footer-distributed {
+  background-color: #444561;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  font: bold 16px sans-serif;
+  text-align: left;
+  padding: 50px 60px 40px;
+  overflow: hidden;
+}
+
+/* Footer left */
+/* line 15, ../scss/partials/_footer.scss */
+.footer-distributed .footer-left {
+  float: left;
+}
+
+/* The company logo */
+/* line 21, ../scss/partials/_footer.scss */
+.footer-distributed h3 {
+  color: #ffffff;
+  font: normal 36px 'Cookie', cursive;
+  margin: 0 0 10px;
+}
+
+/* line 27, ../scss/partials/_footer.scss */
+.footer-distributed h3 span {
+  color: #5383d3;
+}
+
+/* Footer links */
+/* line 33, ../scss/partials/_footer.scss */
+.footer-distributed .footer-links {
+  color: #ffffff;
+  margin: 0 0 10px;
+  padding: 0;
+}
+
+/* line 39, ../scss/partials/_footer.scss */
+.footer-distributed .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+}
+
+/* line 46, ../scss/partials/_footer.scss */
+.footer-distributed .footer-company-name {
+  color: #8f9296;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+/* Footer social icons */
+/* line 55, ../scss/partials/_footer.scss */
+.footer-distributed .footer-icons {
+  margin-top: 40px;
+}
+
+/* line 59, ../scss/partials/_footer.scss */
+.footer-distributed .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #083150;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+
+/* Footer Right */
+/* line 78, ../scss/partials/_footer.scss */
+.footer-distributed .footer-right {
+  float: right;
+}
+
+/* line 82, ../scss/partials/_footer.scss */
+.footer-distributed .footer-right p {
+  display: inline-block;
+  vertical-align: top;
+  margin: 15px 42px 0 0;
+  color: #ffffff;
+}
+
+/* The contact form */
+/* line 91, ../scss/partials/_footer.scss */
+.footer-distributed form {
+  display: inline-block;
+}
+
+/* line 95, ../scss/partials/_footer.scss */
+.footer-distributed form input,
+.footer-distributed form textarea {
+  display: block;
+  border-radius: 3px;
+  box-sizing: border-box;
+  background-color: #083150;
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
+  border: none;
+  resize: none;
+  font: inherit;
+  font-size: 14px;
+  font-weight: normal;
+  color: #d1d2d2;
+  width: 400px;
+  padding: 18px;
+}
+
+/* line 114, ../scss/partials/_footer.scss */
+.footer-distributed ::-webkit-input-placeholder {
+  color: #fff;
+}
+
+/* line 118, ../scss/partials/_footer.scss */
+.footer-distributed ::-moz-placeholder {
+  color: #fff;
+  opacity: 1;
+}
+
+/* line 123, ../scss/partials/_footer.scss */
+.footer-distributed :-ms-input-placeholder {
+  color: #fff;
+}
+
+/* line 128, ../scss/partials/_footer.scss */
+.footer-distributed form input {
+  height: 55px;
+  margin-bottom: 15px;
+}
+
+/* line 133, ../scss/partials/_footer.scss */
+.footer-distributed form textarea {
+  height: 100px;
+  margin-bottom: 20px;
+}
+
+/* line 138, ../scss/partials/_footer.scss */
+.footer-distributed form button {
+  border-radius: 3px;
+  background-color: #083150;
+  color: #ffffff;
+  border: 0;
+  padding: 15px 50px;
+  font-weight: bold;
+  float: right;
+}
+
+/* If you don't want the footer to be responsive, remove these media queries */
+@media (max-width: 1000px) {
+  /* line 152, ../scss/partials/_footer.scss */
+  .footer-distributed {
+    font: bold 14px sans-serif;
+  }
+
+  /* line 156, ../scss/partials/_footer.scss */
+  .footer-distributed .footer-company-name {
+    font-size: 12px;
+  }
+
+  /* line 160, ../scss/partials/_footer.scss */
+  .footer-distributed form input,
+  .footer-distributed form textarea {
+    width: 250px;
+  }
+
+  /* line 165, ../scss/partials/_footer.scss */
+  .footer-distributed form button {
+    padding: 10px 35px;
+  }
+}
+@media (max-width: 800px) {
+  /* line 173, ../scss/partials/_footer.scss */
+  .footer-distributed {
+    padding: 30px;
+  }
+
+  /* line 177, ../scss/partials/_footer.scss */
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-right {
+    float: none;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  /* line 184, ../scss/partials/_footer.scss */
+  .footer-distributed .footer-left {
+    margin-bottom: 40px;
+  }
+
+  /* line 188, ../scss/partials/_footer.scss */
+  .footer-distributed form {
+    margin-top: 30px;
+  }
+
+  /* line 192, ../scss/partials/_footer.scss */
+  .footer-distributed form {
+    display: block;
+  }
+
+  /* line 196, ../scss/partials/_footer.scss */
+  .footer-distributed form button {
+    float: none;
+  }
+
+  /* line 199, ../scss/partials/_footer.scss */
+  .retourhaut {
+    top: 5px;
+  }
+}
+/* line 203, ../scss/partials/_footer.scss */
+.retourhaut {
+  float: right;
+  font-size: 5rem !important;
+}
+
+/* line 207, ../scss/partials/_footer.scss */
+.retourhaut:hover {
+  text-decoration: none;
+}
+
+/* line 2, ../scss/index.scss */
 html {
   font-size: 62.5%;
 }
 
-/* line 4, ../scss/index.scss */
+/* line 5, ../scss/index.scss */
 body {
   background-color: #232539;
 }
 
-/* line 8, ../scss/index.scss */
+/* line 9, ../scss/index.scss */
 .welcome {
   width: 100%;
   padding: 50px;
@@ -19,7 +246,7 @@ body {
   font-weight: bold;
 }
 
-/* line 17, ../scss/index.scss */
+/* line 18, ../scss/index.scss */
 .planmdn {
   width: 80%;
   height: auto;
@@ -28,13 +255,16 @@ body {
   display: block;
 }
 
-/* line 24, ../scss/index.scss */
+/* line 25, ../scss/index.scss */
 .plan {
   justify-content: center;
 }
 
-/* line 27, ../scss/index.scss */
-.dlplan {
-  margin-top: 25px;
+/* line 28, ../scss/index.scss */
+.plandl {
+  margin-top: 25px auto;
+  font-size: 3rem;
+  display: block;
   text-align: center;
+  color: #D8B43F;
 }
