--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,3 +1,4 @@
+@import "partials/footer";
 html{
   font-size: 62.5%;
 }
@@ -24,7 +25,10 @@ display: block;
 .plan{
   justify-content: center;
 }
-.dlplan{
-  margin-top: 25px;
+.plandl{
+  margin-top: 25px auto;
+  font-size: 3rem;
+  display: block;
   text-align: center;
+  color: #D8B43F;
 }
