--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -3,7 +3,7 @@ section{
   width:100%;
 }
 .onglet a {
-  color:#6A9519;
+  color:#E95E3F;
   text-decoration:none;
 }
 nav {
@@ -19,7 +19,7 @@ nav {
 	  li {
       display:inline-block;
       list-style:none;
-      width:125px;
+      width:150px;
       text-align:center;
       font-family:'Montserrat', sans-serif;
       border: 1px dashed rgba(255,255,255, 0);
@@ -29,7 +29,7 @@ nav {
       transition:all .2s;
       -webkit-transition:all .2s;
 			&:hover {
-				background:rgba(0,68,19,.8);
+				background-image:linear-gradient(#846828, #D8B43F);
 				a {
           text-decoration:none;
           color:#ffffff;
