--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ section {
 
 /* line 5, ../scss/partials/_navbar.scss */
 .onglet a {
-  color: #E95E3F;
+  color: #D8B43F;
   text-decoration: none;
 }
 
@@ -366,13 +366,12 @@ nav {
 nav ul {
   text-align: center;
   font-size: 1.6rem;
-  border-bottom: 1px solid #fff;
   position: absolute;
   width: 100%;
   padding: 0;
   z-index: 100;
 }
-/* line 19, ../scss/partials/_navbar.scss */
+/* line 18, ../scss/partials/_navbar.scss */
 nav ul li {
   display: inline-block;
   list-style: none;
@@ -380,17 +379,17 @@ nav ul li {
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   border: 1px dashed rgba(255, 255, 255, 0);
-  padding: 20px 0 20px 0;
+  padding: 30px 0 30px 0;
   margin: -1px -2px -1px -1px;
   cursor: pointer;
   transition: all .2s;
   -webkit-transition: all .2s;
 }
-/* line 31, ../scss/partials/_navbar.scss */
+/* line 30, ../scss/partials/_navbar.scss */
 nav ul li:hover {
   background-image: linear-gradient(#846828, #D8B43F);
 }
-/* line 33, ../scss/partials/_navbar.scss */
+/* line 32, ../scss/partials/_navbar.scss */
 nav ul li:hover a {
   text-decoration: none;
   color: #ffffff;
