--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -3,7 +3,7 @@ section{
   width:100%;
 }
 .onglet a {
-  color:#E95E3F;
+  color:#D8B43F;
   text-decoration:none;
 }
 nav {
@@ -11,7 +11,6 @@ nav {
 	ul {
 		text-align: center;
     font-size: 1.6rem;
-    border-bottom: 1px solid #fff;
     position:absolute;
     width:100%;
     padding:0;
@@ -23,7 +22,7 @@ nav {
       text-align:center;
       font-family:'Montserrat', sans-serif;
       border: 1px dashed rgba(255,255,255, 0);
-      padding:20px 0 20px 0;
+      padding:30px 0 30px 0;
       margin:-1px -2px -1px -1px;
       cursor:pointer;
       transition:all .2s;
